--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.8",
+    "@uppy/core": "^3.5.1",
+    "@uppy/dashboard": "^3.5.4",
+    "@uppy/image-editor": "^2.2.1",
+    "@uppy/xhr-upload": "^3.4.1",
     "autoprefixer": "^10.4.16",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "cropperjs": "^1.6.1",
     "esbuild": "^0.19.4",
     "nodemon": "^3.0.1",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
-    "sass": "^1.69.0"
+    "sass": "^1.69.0",
+    "tui-image-editor": "^3.15.3"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
