change the image in my post from the original to the cropped

--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@excid3/uppy-activestorage-upload": "https://github.com/excid3/uppy-activestorage-upload.git",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.8",
+    "@rails/activestorage": "^7.1.1",
     "@uppy/core": "^3.5.1",
     "@uppy/dashboard": "^3.5.4",
+    "@uppy/form": "^3.0.2",
     "@uppy/image-editor": "^2.2.1",
     "@uppy/xhr-upload": "^3.4.1",
     "autoprefixer": "^10.4.16",
